--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
         <div style="width: 100px; height:40px; background:green;">
         </div>
     </div>
-    <div class="fade-out-vslow-infinite">
-        <p>bounce</p> 
+    <div class="move-in-5sec-infinite">
+        <p>Move in</p> 
     </div>
-    <div class="move-in-3sec-infinite">
-        <div style="width: 100px; height:40px; background:green;"></div>
-            <p>move in</p> 
+    <div>
+        <div class="pulse-vslow-es-out-alt-rev-infinite" style="width: 100px; height:40px; background:green;"></div>
+            <!-- <p>move in</p>  -->
+    </div><br><br>
+    <div class="fade-out-vslow-infinite">
+        <div style="width: 100px; height:40px ; background:green;"></div>
+            <!-- <p>move in</p>  -->
     </div>
 </body>
 </html>
